// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`re-renders preview page after preview is loaded 1`] = `
<PreviewPage
  editTemplatePath="/templates/edit/test-template"
  label="Draft"
  loading={false}
/>
`;

exports[`renders preview page when loading preview 1`] = `
<PreviewPage
  editTemplatePath="/templates/edit/test-template"
  label="Draft"
  loading={true}
/>
`;
